--- a/rock-paper-scissors.html
+++ b/rock-paper-scissors.html
@@ -4,10 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script type="text/javascript" src="rock-paper-scissors.js"></script>
+    <script type="text/javascript" defer src="rock-paper-scissors.js"></script>
 
 </head>
 <body>
-    
+    <p>Make your selection:</p>
+    <button id="rock"> ROCK </button>
+    <button id="paper"> PAPER </button>
+    <button id="scissors"> SCISSORS </button>
+
+    <div id="results">
+        <p id="results">Results:</p>
+    </div>
 </body>
 </html>
