--- a/rock-paper-scissors.html
+++ b/rock-paper-scissors.html
@@ -14,7 +14,11 @@
     <button id="scissors"> SCISSORS </button>
 
     <div id="results">
-        <p id="results">Results:</p>
+        <p>Results:</p>
+        <span>Computer:</span>
+        <span id="computer-score">0</span>
+        <span>Player:</span>
+        <span id="player-score">0</span>
     </div>
 </body>
 </html>
